--- a/style.css
+++ b/style.css
@@ -40,10 +40,6 @@ h1 {
   gap: 10px;
 }
 
-#header {
-  display: flex;
-}
-
 #todo-select {
   background: #007C9F;
   color: #fafafa;
@@ -65,6 +61,10 @@ h1 {
 }
 
 form {
+  display: flex;
+}
+
+.inputs-container {
   flex-grow: 1;
   position: relative;
 }
@@ -88,10 +88,14 @@ form {
   cursor: pointer;
 }
 
+.select-container {
+  display: flex;
+}
+
 .todo {
   margin-bottom: 10px;
   padding: 0 16px;
-  background-color: var(--primaryColor);
+  background-color: #DCF5FA;
   border-radius: 15px;
   display: flex;
   align-items: center;
@@ -101,11 +105,6 @@ form {
   padding: 15px;
   padding-right: 0;
   flex-grow: 1;
-}
-
-input[type="checkbox"]:checked ~ .todo-text {
-  text-decoration: line-through;
-  color: var(--secondaryColor);
 }
 
 .edit-button {
