--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --primaryColor: #fafafa;
-  --secondaryColor: #005f7a;
+  --primaryBackgroundColor: #DCF5FA;
+  --secondaryColor: #007C9F;
 }
 
 * {
@@ -16,7 +17,7 @@ html {
 body {
   min-height: 100vh;
   padding: 10px;
-  background-color: var(--secondaryColor);
+  background-color: #005f7a;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -41,8 +42,8 @@ h1 {
 }
 
 #todo-select {
-  background: #007C9F;
-  color: #fafafa;
+  background: var(--secondaryColor);
+  color: var(--primaryColor);
   border-radius: 4px;
   border: none;
   margin-left: 8px;
@@ -66,8 +67,8 @@ h1 {
   position: absolute;
   top: 0;
   right: 0;
-  background-color: #DCF5FA;
-  color: #007C9F;
+  background-color: var(--primaryBackgroundColor);
+  color: var(--secondaryColor);
   height: 100%;
   padding: 0 15px 0 15px;
   font-weight: 600;
@@ -105,8 +106,8 @@ form {
   top: 0;
   right: 0;
 
-  background-color: #DCF5FA;
-  color: #007C9F;
+  background-color: var(--primaryBackgroundColor);
+  color: var(--secondaryColor);
   height: 100%;
   padding: 0 30px;
   font-weight: 600;
@@ -122,7 +123,7 @@ form {
 .todo {
   margin-bottom: 10px;
   padding: 0 16px;
-  background-color: #DCF5FA;
+  background-color: var(--primaryBackgroundColor);
   border-radius: 1000px; /* Make it consistent */
   display: flex;
   align-items: center;
@@ -134,7 +135,7 @@ form {
 
 .delete-button {
   background: #D52117;
-  color: #fafafa;
+  color: var(--primaryColor);
   border-radius: 1000px;
   border: none;
   padding: 0 20px;
@@ -151,7 +152,7 @@ form {
 
 .edit-button {
   background: green;
-  color: #fafafa;
+  color: var(--primaryColor);
   border-radius: 4px;
   border: none;
   padding: 4px 11px;
@@ -161,7 +162,7 @@ form {
 
 .delete-button {
   background: #D52117;
-  color: #fafafa;
+  color: var(--primaryColor);
   border-radius: 4px;
   border: none;
   padding: 4px 11px;
